tests/baselines/reference/derivedTypeCallingBaseImplWithOptionalParams.errors.txt
tests/cases/compiler/derivedTypeCallingBaseImplWithOptionalParams.ts(13,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/derivedTypeCallingBaseImplWithOptionalParams.ts (1 errors) ====
    interface MyInterface {
        myMethod(...myList: any[]);
    }
    class MyClass implements MyInterface {
        myMethod(myList: any[]) { // valid
        }
    }
    
    var x: MyInterface = new MyClass();
    x.myMethod(); // should be valid, but MyClass has no implementation to handle it.
    
    var y: MyClass = new MyClass();
    y.myMethod(); // error
    ~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.